--- a/game_config.yaml
+++ b/game_config.yaml
@@ -8,30 +8,30 @@ delay_before_start: 3
 ### TODO: ambil solo
 
 teams:
-    -   name: Red Team
+    -   name: "Red Team"
         tanks:
-            -   bot_path: examples/bots/guard.yaml
+            -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [1, 2]
                 color: "#000000"
                 
-            -   bot_path: examples/bots/guard.yaml
+            -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [2, 3]
                 color: "#000000"
                 
-            -   bot_path: examples/bots/guard.yaml
+            -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [3, 4]
                 color: "#000000"
                 
-    -   name: Blue Team
+    -   name: "Blue Team"
         tanks:
-            -   bot_path: examples/bots/guard.yaml
-                initial_position: [1, 2]
+            -   bot_path: "examples/bots/guard.yaml"
+                initial_position: [5, 2]
                 color: "#000000"
                 
-            -   bot_path: examples/bots/guard.yaml
-                initial_position: [2, 3]
+            -   bot_path: "examples/bots/guard.yaml"
+                initial_position: [6, 3]
                 color: "#000000"
                 
-            -   bot_path: examples/bots/guard.yaml
-                initial_position: [3, 4]
+            -   bot_path: "examples/bots/guard.yaml"
+                initial_position: [7, 4]
                 color: "#000000"
