--- a/game_config.yaml
+++ b/game_config.yaml
@@ -2,7 +2,7 @@ window_width: 640
 window_height: 480
 row_count: 15
 col_count: 20
-frame_rate: 20
+frame_rate: 40
 delay_before_start: 3
 
 ### TODO: ambil solo
@@ -12,26 +12,26 @@ teams:
         tanks:
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [1, 2]
-                color: "#000000"
+                color: [255, 0, 0]
                 
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [2, 3]
-                color: "#000000"
+                color: [205, 0, 0]
                 
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [3, 4]
-                color: "#000000"
+                color: [155, 0, 0]
                 
     -   name: "Blue Team"
         tanks:
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [5, 2]
-                color: "#000000"
+                color: [0, 0, 255]
                 
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [6, 3]
-                color: "#000000"
+                color: [0, 0, 205]
                 
             -   bot_path: "examples/bots/guard.yaml"
                 initial_position: [7, 4]
-                color: "#000000"
+                color: [0, 0, 155]
