--- a/examples/bots/guard.yaml
+++ b/examples/bots/guard.yaml
@@ -16,7 +16,7 @@ actions:
         commands:
             - "move south"
             
-        transitions: # Ganti semua
+        transitions:
             -   condition: "wall on south"
                 next_action: move_west
                 
@@ -25,7 +25,7 @@ actions:
 
     move_west:
         commands:
-            - [move, west]
+            - "move west"
         
         transitions:
             -   condition: "wall on west"
@@ -36,7 +36,7 @@ actions:
             
     move_north:
         commands:
-            - [move, north]
+            - "move north"
         
         transitions:
             -   condition: "wall on north"
@@ -47,9 +47,9 @@ actions:
                 
     triple_shoot_east:
         commands:
-            - [shoot, east]
-            - [shoot, east]
-            - [shoot, east]
+            - "shoot east"
+            - "shoot east"
+            - "shoot east"
             
         transitions:
             -   condition: "no enemy on east"
@@ -57,9 +57,9 @@ actions:
                 
     triple_shoot_south:
         commands:
-            - [shoot, south]
-            - [shoot, south]
-            - [shoot, south]
+            - "shoot south"
+            - "shoot south"
+            - "shoot south"
             
         transitions:
             -   condition: "no enemy on south"
@@ -67,9 +67,9 @@ actions:
     
     triple_shoot_west:
         commands:
-            - [shoot, west]
-            - [shoot, west]
-            - [shoot, west]
+            - "shoot west"
+            - "shoot west"
+            - "shoot west"
             
         transitions:
             -   condition: "no enemy on west"
@@ -77,9 +77,9 @@ actions:
     
     triple_shoot_north:
         commands:
-            - [shoot, north]
-            - [shoot, north]
-            - [shoot, north]
+            - "shoot north"
+            - "shoot north"
+            - "shoot north"
             
         transitions:
             -   condition: "no enemy on north"
